documentize uploadfile, getuserdata and pagenation routes
